force-app/main/default/objects/Apttus_Config2__BannerSettings__c/Apttus_Config2__BannerSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings to display content (formatted text or Image URL) on blank intermediate pages</description>
    <label>Config Banner Settings</label>
</CustomObject>