force-app/main/default/objects/Apttus_Config2__BannerSettings__c/fields/Apttus_Config2__BannerMessageContext__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BannerMessageContext__c</fullName>
    <description>Identifies message fragments to display on intermediate page. The &apos;Progressbar&apos; context displays right below the progress bar and &apos;Marketing&apos; context display at the middle of the page.</description>
    <inlineHelpText>Allow values:
Progressbar
Marketing

If the page context is &apos;Progressbar&apos;, BannerType must be &apos;CustomLabel&apos;</inlineHelpText>
    <label>BannerMessageContext</label>
    <length>18</length>
    <type>Text</type>
</CustomField>