force-app/main/default/objects/Apttus_Config2__BannerSettings__c/fields/Apttus_Config2__BannerPageContext__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BannerPageContext__c</fullName>
    <description>Identifies intermediate page to display revevant progressbar, marketing messages</description>
    <inlineHelpText>Allowed values:
Pricing
Catalog</inlineHelpText>
    <label>BannerPageContext</label>
    <length>18</length>
    <type>Text</type>
</CustomField>