force-app/main/default/objects/Apttus_Config2__BannerSettings__c/fields/Apttus_Config2__BannerSource__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BannerSource__c</fullName>
    <description>Display content - text/image URL</description>
    <label>BannerSource</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>