force-app/main/default/objects/Apttus_Config2__BannerSettings__c/fields/Apttus_Config2__BannerType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BannerType__c</fullName>
    <description>Type of banner display type. Allowed values are ImageURL, CustomLabel - a display helper property</description>
    <inlineHelpText>Allowed values: 
ImageURL
CustomLabel</inlineHelpText>
    <label>BannerType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>