force-app/main/default/objects/Apttus_Config2__BannerSettings__c/fields/Apttus_Config2__Sequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Sequence__c</fullName>
    <description>Sequence number for the display banner content</description>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>